--- a/src/styles.css
+++ b/src/styles.css
@@ -4,16 +4,26 @@ html {
 }
 
 body {
+
+  
   padding: 0;
   margin: 0;
   font-family: Courier, 'Courier New', monospace;
   font-size: 1.6rem;
-  background: #fff;
+  background-image: url("images/FondoCSS.jpg");
   color: #000;
 }
 
 a {
   color: #c39;
+}
+
+.content-box-purple {
+  background-color: #e2e2f9;
+  border: 4px solid #bebde9;
+  margin: 10 0 25px;
+  overflow: hidden;
+  padding: 20px;
 }
 
 main {
