--- a/src/styles.css
+++ b/src/styles.css
@@ -18,10 +18,61 @@ a {
   color: #c39;
 }
 
+.caja {
+
+font-family: sans-serif;
+
+color: #ffffff;
+
+font-size: 18px;
+
+font-weight: 400;
+
+text-align: center;
+
+background: #A290B0;
+
+margin: 0 0 20px;
+
+overflow: hidden;
+
+padding: 20px;
+
+border-radius: 25px 0px 25px 0px;
+
+-moz-border-radius: 35px 0px 35px 0px;
+
+-webkit-border-radius: 35px 0px 35px 0px;
+
+border: 2px solid #8243B3;
+
+}
+
 .content-box-purple {
-  background-color: #e2e2f9;
+  background-color: #66358B;
   border: 4px solid #bebde9;
-  margin: 10 0 25px;
+  width: 350px;
+  font-size: 13pt;
+  position: relative;
+  right: -120px;
+  margin: 00 0 25px;
+  text-align: left;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.caja-versos {
+
+font-family: vivaldi;
+font-size: 16pt;
+ background-color: #66358B;
+  border: 4px solid #bebde9;
+  width: 400px;
+  position: relative;
+  right: -980px;
+  bottom: 210px;
+  margin: 00 0 25px;
+  text-align: center;
   overflow: hidden;
   padding: 20px;
 }
